# jetson_catkin_ws

./: .gitignore  ESP32端控制命令协议指导.md  MPU通信及反馈控制策略.md  README.md  ROS2_HUMBLE_迁移指导.md  ROS端控制计划指导.md
.github/: copilot-instructions.md
devel/include/esp32_motor_control/: MotorCommand.h
devel/lib/pkgconfig/: esp32_motor_control.pc
devel/lib/python2.7/dist-packages/esp32_motor_control/msg/: _MotorCommand.py
devel/share/common-lisp/ros/esp32_motor_control/msg/: MotorCommand.lisp  _package.lisp  _package_MotorCommand.lisp  esp32_motor_control-msg.asd
devel/share/esp32_motor_control/cmake/: esp32_motor_control-msg-extras.cmake  esp32_motor_control-msg-paths.cmake  esp32_motor_controlConfig.cmake
devel/share/gennodejs/ros/esp32_motor_control/msg/: MotorCommand.js  _index.js
devel/share/roseus/ros/esp32_motor_control/: manifest.l
devel/share/roseus/ros/esp32_motor_control/msg/: MotorCommand.l
ros2_ws/src/esp32_motor_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/esp32_motor_control/esp32_motor_control/: esp32_bridge_node.py  motor_control.py  test_motor_control.py
ros2_ws/src/esp32_motor_control/launch/: esp32_bridge.launch.py
ros2_ws/src/esp32_motor_control_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/esp32_motor_control_msgs/msg/: MotorCommand.msg
src/esp32_motor_control/: CMakeLists.txt  package.xml
src/esp32_motor_control/launch/: esp32_bridge.launch
src/esp32_motor_control/msg/: MotorCommand.msg
src/esp32_motor_control/scripts/: esp32_bridge.py  motor_control.py  test_import.py  test_motor_control.py
